[package]
name = "ipl3"
version = "0.1.0"
authors = ["awygle <awygle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emu_core = { version = "0.1.1", features = ["glsl-compile"] }
emu_glsl = "0.1.0"
zerocopy = "0.2.0"
futures = "0.3.1"
derive_more = "0.99.2"
shaderc = { version = "0.6.2" }
gumdrop = "0.8.0"
byteorder = "1.3"
rand = "0.7.3"
rayon = "1.3"

[[bin]]
name = "gpu3hasher"
path = "src/main.rs"

[[bin]]
name = "cpu3hasher"
path = "src/cpu.rs"